Add tests for comparison utils